--- a/src/app/app.html
+++ b/src/app/app.html
@@ -25,7 +25,7 @@
   }
   @if (app.initialized()) {
   <!-- Top toolbar - now outside and above the sidenav container -->
-  <mat-toolbar color="primary" class="app-toolbar no-print">
+  <mat-toolbar color="primary" class="app-toolbar no-print no-select">
     @if (!layout.search()) {
     <button mat-icon-button (click)="toggleSidenav()" aria-label="Toggle sidenav">
       <mat-icon>menu</mat-icon>
