--- a/src/styles.scss
+++ b/src/styles.scss
@@ -255,6 +255,13 @@ a:hover {
   flex: 1 1 auto;
 }
 
+.no-select {
+  -webkit-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+}
+
 // Form field utilities
 .mat-mdc-form-field {
   width: 100%;
