fix: Simplify button markup for editing profile in profile header

--- a/src/app/pages/profile/profile-header/profile-header.component.html
+++ b/src/app/pages/profile/profile-header/profile-header.component.html
@@ -241,7 +241,7 @@
         }
 
         @if (isOwnProfile()) {
-        <button class="hide-small" mat-menu-item routerLink="edit" [queryParamsHandling]="'preserve'">
+        <button mat-menu-item routerLink="edit" [queryParamsHandling]="'preserve'">
           <mat-icon>edit</mat-icon>
           <span>Edit Profile</span>
         </button>
