feat: Add floating logo style to login dialog for improved UI layout

--- a/src/app/components/login-dialog/login-dialog.component.html
+++ b/src/app/components/login-dialog/login-dialog.component.html
@@ -18,7 +18,8 @@
     </button>
     }
 
-    <img src="icons/icon-128x128.png" alt="Nostria Logo" class="app-icon" />
+    <!-- Floating logo in top right corner -->
+    <img src="icons/icon-128x128.png" alt="Nostria Logo" class="app-icon-floating" />
 
     <!-- Dynamic title based on current step -->
     <h2 mat-dialog-title>
