feat: Implement NIP-22 comment support for articles with addressable events

--- a/src/app/pages/article/article.component.scss
+++ b/src/app/pages/article/article.component.scss
@@ -572,6 +572,18 @@
   }
 }
 
+// Comments section
+.article-comments {
+  margin-top: 48px;
+  padding-top: 32px;
+  border-top: 1px solid var(--mat-sys-outline-variant);
+
+  @media (max-width: 768px) {
+    margin-top: 32px;
+    padding-top: 24px;
+  }
+}
+
 // Print-specific styles for articles
 @media print {
   .article-container {
