--- a/src/app/pages/premium/premium.component.scss
+++ b/src/app/pages/premium/premium.component.scss
@@ -277,3 +277,11 @@
     margin-bottom: 1rem;
   }
 }
+
+.username-prompt {
+  margin-top: 16px;
+}
+
+.username-prompt-text {
+  margin-bottom: 12px;
+}
