--- a/src/app/pages/premium/settings/settings.html
+++ b/src/app/pages/premium/settings/settings.html
@@ -18,21 +18,24 @@
         @if (accountState.subscription()?.username) {
         <mat-list-item role="listitem">
           Username: {{ accountState.subscription()?.username }}@nostria.app
+          <button mat-icon-button (click)="openSetUsernameDialog()" matListItemMeta>
+            <mat-icon>edit</mat-icon>
+          </button>
+        </mat-list-item>
+        } @else {
+        <mat-list-item role="listitem">
+          <div class="username-prompt">
+            <p class="username-prompt-text">
+              You haven't set your premium username yet. Set it now to claim your unique identity!
+            </p>
+            <button mat-flat-button color="primary" (click)="openSetUsernameDialog()">
+              <mat-icon>alternate_email</mat-icon>
+              Set Username
+            </button>
+          </div>
         </mat-list-item>
         }
       </mat-list>
-
-      @if (!accountState.subscription()?.username) {
-      <div class="username-prompt">
-        <p class="username-prompt-text">
-          You haven't set your premium username yet. Set it now to claim your unique identity!
-        </p>
-        <button mat-flat-button color="primary" (click)="openSetUsernameDialog()">
-          <mat-icon>alternate_email</mat-icon>
-          Set Username
-        </button>
-      </div>
-      }
     </mat-card-content>
   </mat-card>
   } @else {
